# 0S

./: .gitignore  CMakeLists.txt  README.md  boot.s  build.sh  clean.sh  config.sh  headers.sh  iso.sh  kmain.cc  qemu.sh  syscall.hpp  tty.hpp
arch/i386/: boot.s  memlayout.h  mmu.h  switch.s  vector.py  x86.h
arch/i386/boot/: boot1.s  utils.s
arch/riscv/: boot.s  switch.s
busybox/: grep.c  ln.c  ls.c  mkdir.c  rm.c  sh.cc
include/: allocator.hpp  dict.hpp  queue.hpp  scopedlock.hpp
include/kernel/: elf.hpp  file.hpp  fs.hpp  memlayout.hpp  mmu.hpp  pagetable.h  pipe.hpp  process.hpp  spinlock.hpp  syscall.hpp  tty.hpp  utils.h
include/ostl/: README.md  type_traits.hpp
kernel/: elf.hpp  fcntl.hpp  kernel.cc  proc.hpp  scoped_lock.hpp  spinlock.cc  spinlock.hpp  syscall.cc  tty.cc
kernel/arch/i386/: crtn.s  linker.ld  make.config  tty.cc
kernel/include/kernel/: buffer.hpp  console.hpp  fcntl.hpp  file.hpp  fs.hpp  kalloc.hpp  kbd.h  lapic.hpp  log.hpp  malloc.hpp  memlayout.hpp  mmu.hpp  param.hpp  process.hpp  sleeplock.hpp  tty.hpp
kernel/include/ostl/: allocator.hpp  pair.hpp  utility.hpp  vector.hpp
kernel/src/: kernel.cc  logger.cc  painc.cc  sleeplock.cc  spinlock.cc  tty.cc
libc/: README.md  cdefs.h  stdio.c  stdio.h  stdlib.h  string.h
libc/include/: stdio.h
libc/include/sys/: cdefs.h
ostl/: README.md  optional.hpp  pair.hpp  queue.hpp  type_traits.hpp
verify/: sleep.p
